# comic-optimizer

./: .gitignore  README.md  build.bat  comic-optimizer.spec  comic_optimizer_gui.py  config.py  core.py  gui.py  main.py  optimizer_core.py  process-lossy.py  process.py  pyproject.toml
settings/: appearance.py  dialog.py
src/: about.py  config.py  core.py  gui.py  main.py  presets.json
src/settings/: appearance.py  dialog.py  settings_utils.py  user_settings.toml
