[project]
name = "comic-optimizer"
version = "0.1.0"
description = "A simple GUI to optimize comics with pingo"
readme = "README.md"
requires-python = ">=3.13.7"
dependencies = [
    "black>=25.1.0",
    "natsort>=8.4.0",
    "pyinstaller>=6.15.0",
    "send2trash>=1.8.3",
    "ttkbootstrap>=1.14.2",
]
